# CS450_Team_Repo

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Fall 2025 - Phase 1 - A CLI for trustworthy model re-use.docx  README.md  URL_FILE.txt  debug_api_data.py  debug_availability.py  debug_run_data.py  hello_Fahd.txt  pyproject.toml  pytest.ini  requirements.txt  run  test_comprehensive_urls.txt  test_single.txt  test_urls.txt  urls.txt
.dist/: local_repo.ndjson
docs/: API.md  CONTRIBUTING.md  GITHUB_PROJECT_SETUP.md  LLM_INTEGRATION.md  PROJECT_PLAN.md
src/ai_model_catalog/: __init__.py  __main__.py  analyze_local_repo.py  cli.py  fetch_repo.py  interactive.py  llm_client.py  llm_metrics.py  llm_service.py  logging_config.py  net_score.py  risk.py  score_model.py  utils.py
src/ai_model_catalog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ai_model_catalog/metrics/: __init__.py  base.py  constants.py  llm_base.py  runner.py  score_available_dataset_and_code.py  score_bus_factor.py  score_code_quality.py  score_code_quality_llm.py  score_dataset_quality.py  score_dataset_quality_llm.py  score_license.py  score_performance_claims.py  score_ramp_up_time.py  score_ramp_up_time_llm.py  score_size.py  scoring_helpers.py  types.py
src/ai_model_catalog/model_sources/: __init__.py  base.py  github_model.py  hf_model.py
test_env/: pyvenv.cfg
tests/: test_ABC.py  test_abc.py  test_analyze_cli.py  test_analyze_local_repo_coverage.py  test_available_owners.py  test_cli.py  test_cli_commands.py  test_cli_commands_simple.py  test_cli_comprehensive.py  test_cli_explain_and_risk  test_cli_simple.py  test_cli_simple_coverage.py  test_code_quality_coverage.py  test_concurrency.py  test_fallback.py  test_fetch.py  test_fetch_repo.py  test_fetch_repo_coverage.py  test_fetch_repo_simple.py  test_format.py  test_git_models.py  test_hf_models.py  test_integration.py  test_interactive.py  test_llm_base_simple.py  test_llm_commands  test_llm_metrics  test_llm_service.py  test_logging_config.py  test_main.py  test_metric_runner.py  test_metrics.py  test_metrics_runner.py  test_model_sources_base.py  test_model_sources_github.py  test_model_sources_simple.py  test_net_score.py  test_network_debug.py  test_ramp_up_time_llm.py  test_scan_local_repo.py  (+26 more)
