[project]
name = "ai-model-catalog"
version = "0.1.0"
description = "CLI to browse and evaluate AI/ML models with metadata."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "requests>=2.32",
  "pydantic>=2.8",        # handy for typed config/models
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pylint>=3.2",
  "pre-commit>=3.7",
]

[project.scripts]
catalog = "ai_model_catalog.cli:app"  # `catalog ...` runs Typer app
catalog-interactive = "ai_model_catalog:run_interactive"  # `catalog-interactive` runs interactive version

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring"
]

[tool.pylint.FORMAT]
max-line-length = 100

[tool.pylint.MASTER]
py-version = "3.10"

[tool.pylint.BASIC]
good-names = ["i","j","k","v","e","id","db"]

[tool.coverage.run]
source = ["src/ai_model_catalog"]

[tool.coverage.report]
skip_empty = true
