[project]
name = "ai-model-catalog"
version = "0.1.0"
description = "CLI to browse and evaluate AI/ML models with metadata."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
  "requests>=2.32",
  "pydantic>=2.8",        # handy for typed config/models
  "GitPython>=3.1",       # for local repository analysis
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "coverage>=7.0",
  "pylint>=3.2",
  "pre-commit>=3.7",
]

[project.scripts]
catalog = "ai_model_catalog.cli:app"  # `catalog ...` runs Typer app
catalog-interactive = "ai_model_catalog.cli:interactive_main"  # `catalog-interactive` runs interactive version

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
  "too-few-public-methods"
]

[tool.pylint.FORMAT]
max-line-length = 100

[tool.pylint.MASTER]
py-version = "3.10"

[tool.pylint.BASIC]
good-names = ["i","j","k","v","e","id","db"]

[tool.coverage.run]
source = ["src/ai_model_catalog"]

[tool.coverage.report]
skip_empty = true

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]
known_first_party = ["ai_model_catalog"]

[tool.mypy]
python_version = "3.13"
mypy_path = ["src"]                # so it finds ai_model_catalog in src/
ignore_missing_imports = true      # don't fail on 3rd-party packages without stubs
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true